# seindict

./: .gitignore  README.md  asciicompression.py  assemble.sh  cmudict  mypy.ini  occ.sh  preprocessing.py  remove_regular_forms.ipynb  to_yaml.ipynb
dictionary/: A.yaml  B.yaml  C.yaml  D.yaml  E.yaml  F.yaml  G.yaml  H.yaml  I.yaml  J.yaml  K.yaml  L.yaml  M.yaml  N.yaml  O.yaml  P.yaml  Q.yaml  R.yaml  S.yaml  T.yaml  U.yaml  V.yaml  W.yaml  X.yaml  Y.yaml  Z.yaml  _header.txt  a.txt  b.txt  c.txt  c.yaml  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  i.yaml  j.txt  k.txt  (+19 more)
entries/: -header.txt  1.patch  A.yaml  B.yaml  C.yaml  D.yaml  E.yaml  F.yaml  G.yaml  H.yaml  I.yaml  J.yaml  K.yaml  L.yaml  M.yaml  N.yaml  O.yaml  P.yaml  Q.yaml  R.yaml  S.yaml  T.yaml  U.yaml  V.yaml  W.yaml  X.yaml  Y.yaml  Z.yaml  _other.yaml
preprocessing/: asciicompression.py  pyproject.toml  requirements.txt  to_json.py
preprocessing/typings/ruamel/yaml/: __init__.pyi  compat.pyi
removed_entries/: README.md  names_and_nonenglish.yaml  rare_words.yaml  weird_words.yaml
scripts/: count_a0_in_open_syll.ipynb  identify_ar_variants.ipynb  identify_stress.ipynb  insert_apostrophes.ipynb  mark_cloth_vowel.ipynb  remove_names.ipynb  remove_rare_words.ipynb  remove_regular_forms.ipynb  replace.sh  replace_y_plus_schwa.ipynb  syllabic_l.ipynb  to_yaml.ipynb  undo_father_bother_merger.ipynb  undo_horse_hoarse_merger.ipynb  undo_ju_iu_merger.ipynb  undo_nurse_mergers.ipynb  undo_pre-r_mergers.ipynb  undo_wine_whine_merger.ipynb  undo_yod_dropping.ipynb  utils.py
(+1 files in other folders)
