[tool.poetry]
name = "preprocessing"
version = "0.1.0"
description = ""
authors = ["Thomas MK <tmke@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"
isort = "^5.10.1"

[tool.mypy]
python_version = "3.10"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
mypy_path = "typings"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
